[gd_scene load_steps=15 format=3 uid="uid://c1es6hg3xd4hf"]

[ext_resource type="Script" uid="uid://nkilyocdgd8x" path="res://scenes/run_complete/run_complete.gd" id="1_uwcho"]
[ext_resource type="PackedScene" uid="uid://id8ej54jj67y" path="res://scenes/ui/stats_panel.tscn" id="2_lm8b5"]

[sub_resource type="Curve" id="Curve_uwcho"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4ha23"]
curve = SubResource("Curve_uwcho")

[sub_resource type="Gradient" id="Gradient_4ha23"]
offsets = PackedFloat32Array(0.512346, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uwcho"]
gradient = SubResource("Gradient_4ha23")

[sub_resource type="Curve" id="Curve_lm8b5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mt223"]
curve = SubResource("Curve_lm8b5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uwcho"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
angle_curve = SubResource("CurveTexture_4ha23")
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 9, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_la1w8"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lm8b5"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mt223"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8slvh"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ha23"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_mt223")
color_ramp = SubResource("GradientTexture1D_uwcho")

[node name="RunComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwcho")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[node name="Fireworks" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.909804, 0.231373, 0.231373, 1)
position = Vector2(100, 219)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_uwcho")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.301961, 0.607843, 0.901961, 1)
position = Vector2(110, 77)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_la1w8")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.976471, 0.760784, 0.168627, 1)
position = Vector2(275, 158)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_lm8b5")

[node name="GPUParticles2D4" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.0862745, 0.352941, 0.298039, 1)
position = Vector2(383, 45)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_mt223")

[node name="GPUParticles2D5" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.419608, 0.243137, 0.458824, 1)
position = Vector2(485, 172)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_8slvh")

[node name="GPUParticles2D6" type="GPUParticles2D" parent="Fireworks"]
self_modulate = Color(0.780392, 0.862745, 0.815686, 1)
position = Vector2(546, 96)
amount = 50
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_4ha23")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "You Win!"
horizontal_alignment = 1

[node name="StatsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Stats"

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="StatsPanel" parent="." instance=ExtResource("2_lm8b5")]
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
